--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <nav class="navbar navbar-expand-md navbar-light fixed-top" style="background-color: #F19483">
 
     <!--     navbar開頭img可以換 還有字也要 連結是雲端硬碟ALL教材的的連結-->
-    <a class="navbar-brand" href="https://drive.google.com/drive/folders/14a9vf6ocsFQWfhhCL3Uy4WKgwjqLWIfb?usp=sharing" target="_blank"><img src="https://nancy-0724.github.io/wild2/icon1.png" width=50px height=50px alt="logo">野外求生-可食用動植物與水資源 </a>
+    <a class="navbar-brand" href="#" target="_blank"><img src="https://nancy-0724.github.io/wild2/icon1.png" width=50px height=50px alt="logo">野外求生-可食用動植物與水資源 </a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
